# vn-text-trim.cpp

./: .gitignore  CMakeLists.txt  README.md  vn-text-trim.toml
.cmake/Modules/: LazyUtils.cmake
3pp/: CMakeLists.txt
lib/: CMakeLists.txt
lib/clipboard/: clipboard.cpp  clipboard.hpp
lib/text/: text.cpp  text.hpp
src/: CMakeLists.txt  cli.hpp  config.cpp  config.hpp  main.cpp
src/dll/: dll.cpp
test/: CMakeLists.txt
test/text/: text.cpp
